packages/canopee-css/src/distributeur/Form/Text/Text.css
.af-form__input-text {
  --color: var(--text-color);
  --border-color: var(--input-border-color);
  --background-color: var(--white);

  padding: 0.625rem 1.25rem;
  border: 1px solid var(--border-color);
  font-size: 1em;
  line-height: 20px;
  color: var(--color);
  background-color: var(--background-color);
}

.af-form__input-text:disabled {
  --color: var(--disabled-color);
  --border-color: var(--disabled-color);
  --background-color: var(--gray10);

  cursor: not-allowed;
}

.af-form__input-text[aria-invalid="true"] {
  --color: var(--error-color);
  --border-color: var(--error-color);
}

.af-form__input-text:focus {
  --color: var(--active-button-border-color);
  --border-color: var(--active-button-border-color);

  outline: 2px solid var(--border-color);
}

.af-form__input-text--hasinfobulle {
  margin-right: 1rem;
}

.af-form__text--success .af-form__input-text,
.af-form__text--valid .af-form__input-text {
  margin-right: 1rem;
}

.af-form__text--success::after,
.af-form__text--valid::after {
  position: relative;
  top: 5px;
  font-family: icons;
  color: var(--valid-element-color);
  content: "\EABA";
}

.af-form__text--success > .af-btn--circle,
.af-form__text--valid > .af-btn--circle {
  margin-right: 1rem;
}

.af-form__text--valid::after {
  display: none;
}

.af-form__text--valid .glyphicon-ok {
  width: 17px;
  margin-left: 2px;
  fill: var(--valid-element-color);
}

.af-form__text--warning {
  padding: 0;
}

.af-form__text--warning .af-form__input-text {
  border: 1px solid var(--warning-color);
  color: var(--warning-color);
}

.af-form__text-wrapper {
  position: relative;
  display: inline-flex;
}

.af-form__input-text::-ms-clear,
.af-form__input-text::-ms-reveal {
  display: none;
}

.af-form__clear {
  position: absolute;
  top: 0.75rem;
  right: 3rem;
}

.af-form__clear:hover {
  border-radius: 100%;
  background: var(--gray30);
  box-shadow: 0 0 0 6px var(--gray30);
}

.af-form__clear .glyphicon {
  display: inherit;
  width: 19px;
  height: 100%;
  padding-top: 0;
}

.af-form__text > .af-popover__wrapper {
  margin-left: 0.5rem;
}

